RESOLVED FIXED26885
[WML] WMLPageState doesn't reset history length correctly
https://bugs.webkit.org/show_bug.cgi?id=26885
Summary [WML] WMLPageState doesn't reset history length correctly
Nikolas Zimmermann
Reported 2009-07-01 08:19:24 PDT
WMLPageState::reset() doesn't reset history length correctly, thus partly breaking onenterforward/onenterbackward support. We don't have any tests for them at the moment, but I'm about to fix that.
Attachments
Initial patch (10.90 KB, patch)
2009-07-01 08:34 PDT, Nikolas Zimmermann
staikos: review+
Nikolas Zimmermann
Comment 1 2009-07-01 08:34:37 PDT
Created attachment 32124 [details] Initial patch
Nikolas Zimmermann
Comment 2 2009-07-01 12:02:20 PDT
Sende LayoutTests/ChangeLog Hinzufügen LayoutTests/wml/onenterforward-event-expected.txt Hinzufügen LayoutTests/wml/onenterforward-event.html Hinzufügen LayoutTests/wml/onenterforward-inline-event-expected.txt Hinzufügen LayoutTests/wml/onenterforward-inline-event.html Hinzufügen LayoutTests/wml/ontimer-event-expected.txt Hinzufügen LayoutTests/wml/ontimer-event.html Hinzufügen LayoutTests/wml/resources/onenterforward-event.js Hinzufügen LayoutTests/wml/resources/onenterforward-event.wml Hinzufügen LayoutTests/wml/resources/onenterforward-inline-event.js Hinzufügen LayoutTests/wml/resources/onenterforward-inline-event.wml Hinzufügen LayoutTests/wml/resources/ontimer-event.js Hinzufügen LayoutTests/wml/resources/ontimer-event.wml Sende LayoutTests/wml/resources/ontimer-inline-event.js Sende WebCore/ChangeLog Sende WebCore/wml/WMLPageState.cpp Übertrage Daten ................ Revision 45444 übertragen.
Nikolas Zimmermann
Comment 3 2009-07-01 12:03:26 PDT
(In reply to comment #2) > Sende LayoutTests/ChangeLog > Hinzufügen LayoutTests/wml/onenterforward-event-expected.txt > Hinzufügen LayoutTests/wml/onenterforward-event.html > Hinzufügen LayoutTests/wml/onenterforward-inline-event-expected.txt > Hinzufügen LayoutTests/wml/onenterforward-inline-event.html > Hinzufügen LayoutTests/wml/ontimer-event-expected.txt > Hinzufügen LayoutTests/wml/ontimer-event.html > Hinzufügen LayoutTests/wml/resources/onenterforward-event.js > Hinzufügen LayoutTests/wml/resources/onenterforward-event.wml > Hinzufügen LayoutTests/wml/resources/onenterforward-inline-event.js > Hinzufügen LayoutTests/wml/resources/onenterforward-inline-event.wml > Hinzufügen LayoutTests/wml/resources/ontimer-event.js > Hinzufügen LayoutTests/wml/resources/ontimer-event.wml > Sende LayoutTests/wml/resources/ontimer-inline-event.js > Sende WebCore/ChangeLog > Sende WebCore/wml/WMLPageState.cpp > Übertrage Daten ................ > Revision 45444 übertragen. cc'ing Eric: Ouch, it seems to me we need a LC_ALL="en_EN" hardcoded in bugzilla-tool. What do you think
Eric Seidel (no email)
Comment 4 2009-07-01 12:06:53 PDT
Well, cearly at least bugzilla and bugzilla-tool are disagreeing on encodings. :) Bug yes, probably we need to set the local as part of bugzilla-tool. patches welcome.
Note You need to log in before you can comment on or make changes to this bug.