2009-07-01  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

Reviewed by George Staikos.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=26885

        Correctly reset history length to '0', not '1'. Old relict from early WML days.
        Add some new WML testcases covering the use of history length (by onenterforward event handling)

        Tests: wml/onenterforward-event.html
               wml/onenterforward-inline-event.html
               wml/ontimer-event.html

        * wml/WMLPageState.cpp:
        (WebCore::WMLPageState::reset):

2009-07-01  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by George Staikos.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=26885

        Add new WML testcases covering onenterforward/ontimer support.

        * wml/onenterforward-event-expected.txt: Added.
        * wml/onenterforward-event.html: Added.
        * wml/onenterforward-inline-event-expected.txt: Added.
        * wml/onenterforward-inline-event.html: Added.
        * wml/ontimer-event-expected.txt: Added.
        * wml/ontimer-event.html: Added.
        * wml/resources/onenterforward-event.js: Added.
        (setupTestDocument):
        (prepareTest):
        (executeTest):
        * wml/resources/onenterforward-event.wml: Added.
        * wml/resources/onenterforward-inline-event.js: Added.
        (setupTestDocument):
        (prepareTest):
        (executeTest):
        * wml/resources/onenterforward-inline-event.wml: Added.
        * wml/resources/ontimer-event.js: Added.
        (setupTestDocument):
        (prepareTest):
        (executeTest):
        * wml/resources/ontimer-event.wml: Added.
        * wml/resources/ontimer-inline-event.js:



Canonical link: https://commits.webkit.org/37109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45444 268f45cc-cd09-0410-ab3c-d52691b4dbfc