LayoutTests/wml/resources/onenterforward-event.js
@@ -1,0 +1,17 @@
+/// [Name] onenterforward-event.js
+
+createWMLTestCase("Tests onenterforward non-inline event declarations", false, "resources/onenterforward-event.wml");
+
+function setupTestDocument() {
+    // no-op
+}
+
+function prepareTest() {
+    // no-op
+}
+
+function executeTest() {
+    completeTest();
+}
+
+var successfullyParsed = true;
