LayoutTests/wml/resources/onenterforward-inline-event.js
@@ -1,0 +1,17 @@
+/// [Name] onenterforward-inline-event.js
+
+createWMLTestCase("Tests onenterforward inline event declarations", false, "resources/onenterforward-inline-event.wml");
+
+function setupTestDocument() {
+    // no-op
+}
+
+function prepareTest() {
+    // no-op
+}
+
+function executeTest() {
+    completeTest();
+}
+
+var successfullyParsed = true;
